# governance-token-distribution-analyzer

./: .deepsource.toml  .gitauthortest  .gitignore  .slugignore  HEROKU_DEPLOYMENT.md  LICENSE  LIVE_API_IMPLEMENTATION_PLAN.md  Makefile  PROGRESS.md  Procfile  README.md  app.json  codecov.yml  env.example  pyproject.toml  pytest.ini  requirements-lock.txt  requirements.txt  setup.py  test_imports.py
.circleci/: config.yml
.github/workflows/: ci.yml  code-quality.yml  combined-coverage.yml  integration-tests.yml  unit-tests.yml
data/: aave_analysis_latest.json  comp_analysis_latest.json  compound_analysis_20250613_083457.json  compound_analysis_20250613_085412.json  compound_analysis_20250613_085504.json  compound_analysis_20250613_085626.json  proposal_validation_20250613_082631.json  proposal_validation_20250613_082713.json  proposal_validation_20250613_082757.json  proposal_validation_20250613_082827.json  proposal_validation_20250613_102046.json  uni_analysis_20250613_082817.json  uni_analysis_20250613_082820.json  uniswap_analysis_20250613_083505.json  uniswap_analysis_20250613_085517.json  uniswap_analysis_latest.json
data/historical/: comp_analysis_20220101.json  comp_analysis_20220401.json  comp_analysis_20220630.json  comp_analysis_20220928.json  comp_analysis_20221227.json  comp_analysis_20230327.json  comp_analysis_20230625.json  comp_analysis_20230923.json  comp_analysis_20231222.json  comp_analysis_20240321.json  comp_analysis_20240619.json  comp_analysis_20240917.json  comp_analysis_20241216.json  comp_analysis_20250316.json  comp_historical_metrics.json  uni_analysis_20220101.json  uni_analysis_20220401.json  uni_analysis_20220630.json  uni_analysis_20220928.json  uni_analysis_20221227.json  uni_analysis_20230327.json  uni_analysis_20230625.json  uni_analysis_20230923.json  uni_analysis_20231222.json  uni_analysis_20240321.json  uni_analysis_20240619.json  uni_analysis_20240917.json  uni_analysis_20241216.json  uni_analysis_20250316.json  uni_historical_metrics.json
data/historical/compound/: compound_snapshot_20210505_102037.json  compound_snapshot_20210604_102037.json  compound_snapshot_20210704_102037.json  compound_snapshot_20210803_102037.json  compound_snapshot_20210902_102037.json  compound_snapshot_20211002_102037.json  compound_snapshot_20211101_102037.json  compound_snapshot_20211201_102037.json  compound_snapshot_20211231_102037.json  compound_snapshot_20220130_102037.json  compound_snapshot_20220301_102037.json  compound_snapshot_20220331_102037.json  compound_snapshot_20220430_102037.json  compound_snapshot_20220530_102037.json  compound_snapshot_20220629_102037.json  compound_snapshot_20220729_102037.json  compound_snapshot_20220828_102037.json  compound_snapshot_20220927_102037.json  compound_snapshot_20221027_102037.json  compound_snapshot_20221126_102037.json  compound_snapshot_20221226_102037.json  compound_snapshot_20230125_102037.json  compound_snapshot_20230224_102037.json  compound_snapshot_20230326_102037.json  (+61 more)
data/sample_outputs/: compound_analysis.json
docs/: DeFi Governance Analysis References.md  api_reference.md  blueprint.html  cli_usage.md  git_best_practices.md  governance_token_mvp.md  governance_token_prd.md  governance_token_roadmap.md  installation.md  integration_testing.md  refactoring_plan.md  usage.md  validation_results.md  voting_block_analysis.md
examples/: README.md  governance_comparison_example.py  voting_block_analysis_example.py
governance_token_analyzer/: __init__.py
governance_token_analyzer/cli/: __init__.py  historical_analysis.py  main.py
governance_token_analyzer/core/: __init__.py  api_client.py  data_collection.py  data_processor.py  delegation_pattern_analysis.py  exceptions.py  historical_data.py  metrics.py  participation_analysis.py  voting_block_analysis.py
governance_token_analyzer/protocols/: __init__.py  aave.py  compound.py  uniswap.py
governance_token_analyzer/visualization/: __init__.py  charts.py  historical_charts.py  report_generator.py
outputs/: compound_analysis.csv  compound_analysis.json  invalid_protocol_analysis.json
reports/: 123_report.html  _report.html  compound_report.html  invalid_protocol_report.html  nonexistent_report.html
scripts/: cleanup_git_history.sh  install_git_hooks.sh  validate_api_connections.py  validate_live_data.py  validate_real_world_proposals.py
src/: aave_analysis.py  cli.py  compound_analysis.py  convert_historical_data.py  generate_report.py  hello_world.py  historical_analysis.py  uniswap_analysis.py  visualize_token_distribution.py
src/analyzer/: __init__.py  advanced_metrics.py  api.py  config.py  data_simulator.py  governance_metrics.py  main.py  token_analysis.py
src/dashboard/: app.py
src/governance_token_analyzer/: __init__.py  __main__.py  cli.py  generate_report.py
tests/: __init__.py  conftest.py  integration_test_plan.md  run_tests.py  test_aave_analysis.py  test_advanced_metrics.py  test_api.py  test_api_client.py  test_api_client_error_handling.py  test_cli_edge_cases.py  test_data_simulator.py  test_data_validation_edge_cases.py  test_governance_metrics.py  test_integration.py  test_integration_simulation.py  test_live_data_integration.py  test_report_generator.py  test_voting_block_analysis.py
tests/integration/: conftest.py  test_api_integration.py  test_cli_integration.py  test_delegation_pattern_analysis_integration.py  test_historical_analysis.py  test_historical_data_integration.py  test_protocol_integration.py  test_visualization_and_reporting.py  test_voting_block_analysis_integration.py
(+79 files in other folders)
