[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "governance-token-analyzer"
version = "0.1.0"
authors = [
    {name = "The Authors", email = "author@example.com"},
]
description = "A tool for analyzing governance token distributions across DeFi protocols"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.31.0",
    "pandas>=2.0.3",
    "numpy>=1.24.4",
    "matplotlib>=3.7.2",
    "seaborn>=0.12.2",
    "python-dotenv>=1.0.0",
    "click>=8.1.3",
    "jinja2>=3.1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.1.5",
    "mypy>=1.6.1",
    "pytest-cov>=4.1.0",
]

[project.scripts]
token-analyzer = "governance_token_analyzer.cli:cli"

[project.urls]
"Homepage" = "https://github.com/your-username/governance-token-distribution-analyzer"
"Bug Tracker" = "https://github.com/your-username/governance-token-distribution-analyzer/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
# Enable the formatter
target-version = "py38"
line-length = 88
indent-width = 4

[tool.ruff.lint]
# Enable Pyflakes (`F`), pycodestyle (`E`), isort (`I`), pydocstyle (`D`)
select = ["E", "F", "W", "I", "D", "UP", "B", "C4", "SIM", "PTH"]
ignore = []

# Allow autofix for all enabled rules (when `--fix` is provided)
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false 